# dns_test_task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
api/src/: conf.py  main.py
api/src/api/: cities.py  road.py  routers.py
api/src/db/: postgres.py
api/src/migrations/: env.py
api/src/migrations/versions/: 1761300297b8_cities_name_unique.py  5057313c2e61_add_initial_data.py  64a3690a3b9b_init.py
api/src/model/: fsp.py
api/src/models/: fsp.py
api/src/repositories/: fsp.py
api/src/schemas/: fsp.py
api/src/services/: fsp.py
api/src/utils/: repository.py  unitofwork.py
api/tests/: conftest.py  test_fsp.py
