[tool.poetry]
name = "fsp service"
version = "0.1.0"
description = "это FastAPI приложение, которое помогает пользователю находить кратчайшее расстояние между городами."
authors = ["Neko1313"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
